# pwatch

./: README.md  pyproject.toml
config/: config.yaml.example
src/pwatch/: __init__.py  paths.py
src/pwatch/app/: cli.py  runner.py
src/pwatch/core/: config_manager.py  notifier.py  sentry.py
src/pwatch/detectors/: __init__.py  base.py  price_velocity.py  volume_spike.py
src/pwatch/exchanges/: __init__.py  base.py  binance.py  bybit.py  okx.py
src/pwatch/notifications/: telegram.py  telegram_bot_service.py
src/pwatch/utils/: cache_manager.py  chart.py  config_io.py  config_validator.py  default_symbols.py  error_handler.py  get_exchange.py  load_config.py  load_symbols_from_file.py  match_symbols.py  monitor_top_movers.py  parse_timeframe.py  performance_monitor.py  send_notifications.py  setup_logging.py  supported_markets.py  top_volume_symbols.py
tests/: quick_test.py  test_cache_manager.py  test_chart_removal.py  test_cli_background_mode.py  test_cli_setup_wizard.py  test_config_manager.py  test_config_validator.py  test_core_notifier.py  test_core_sentry.py  test_detectors.py  test_error_handler.py  test_exchanges_base.py  test_exchanges_binance.py  test_exchanges_okx.py  test_notification_enhancements.py  test_notifications_telegram.py  test_send_notifications.py  test_top_volume_symbols.py  test_utils_get_exchange.py  test_utils_load_config.py  test_utils_match_symbols.py  test_utils_parse_timeframe.py
tools/: update_markets.py
